# bazel_go_template

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
.github/workflows/: main.yml
api/: BUILD.bazel
api/model/: BUILD.bazel  model.proto
api/service/: BUILD.bazel  service.proto
cmd/: README.md
docs/: BUILD  configRelearn.toml
docs/assets/scss/: variables.scss
docs/config/_default/: config.yaml  languages.yaml  params.yaml
docs/content/en/: _index.md
docs/content/en/contributing/: _index.md  code_of_conduct.md  code_style_guide.md  contributors.md
docs/content/en/use/: _index.md
docs/data/menu/: extra.yaml  more.yaml
pkg/: README.md
