load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/project
gazelle(name = "gazelle")

# Use this target to auto generate build files.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=build/go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
